--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -1,33 +1,50 @@
-/* Middle Out Buttom Demo */
-.middle-out-button-demo {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: "Poppins", sans-serif;
-}
-
-.middle-out-button-demo h2 {
+/* Demo Setup Styles */
+.button-demos-body h2 {
     font-size: 30px;
     margin: 20px;
     text-align: center;
 }
 
-.middle-out-button-demo .container {
+.button-demos-body .options-box {
+    width: 75%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.button-demos-body .options-box button {
+    padding: 5px 10px;
+    margin: 5px;
+    border-radius: 5px;
+    background: white;
+    color: black;
+    transition: .5s;
+}
+
+.button-demos-body .options-box button:hover {
+    color: white;
+    background: black;
+}
+
+.button-demos-body .options-box button:focus {
+    outline: none;
+}
+
+.button-demos-body .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 20px 20px 40px;
 }
 
-.middle-out-button-demo .container .button-container {
+.button-demos-body .container .button-container {
     position: relative;
-    width: 50%;
-    height: 100px;
+    width: 75%;
+    height: 150px;
     margin: 10px;
     display: flex;
     justify-content: center;
@@ -36,16 +53,32 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px;
 }
 
-.middle-out-button-demo .container .button-container:before {
+.button-demos-body .container .button-container:before {
     content: attr(data-text);
     position: absolute;
     background: black;
     color: white;
-    padding: 0 5px;
+    padding: 5px 10px;
     top: -15px;
     left: 2%;
     border: 1px solid black;
     z-index: 1;
+}
+
+/* Middle Out Buttom Demo */
+.middle-out-button-demo {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-family: "Poppins", sans-serif;
+}
+
+.middle-out-button-demo .container .button-container:before {
+    padding: 0 5px;
 }
 
 .middle-out-button-demo .container .button-container .middle-out-button {
@@ -150,44 +183,21 @@
 }
 
 .shooting-border-button-demo h2 {
-    font-size: 30px;
-    margin: 20px;
-    text-align: center;
     color: #1670f0;
 }
 
-.shooting-border-button-demo .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
 .shooting-border-button-demo .container .button-container {
-    position: relative;
-    width: 70%;
+    /* width: 70%; */
     height: 200px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background: #0c002b;
     border: .5px solid #1671f05d;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 5px 15px;
 }
 
 .shooting-border-button-demo .container .button-container:before {
-    content: attr(data-text);
-    position: absolute;
     background: #0c002b;
     color: #1670f0;
-    padding: 5px 10px;
-    top: -15px;
-    left: 2%;
     border: .5px solid #1671f05d;
-    z-index: 1;
 }
 
 .shooting-border-button-demo .container .button-container .shooting-border-button {
@@ -352,7 +362,6 @@
     margin: 0;
     padding: 0;
     background: #262626;
-    /* font-family: sans-serif; */
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -362,43 +371,19 @@
 }
 
 .animated-outline-button-demo h2 {
-    font-size: 30px;
-    margin: 20px;
-    text-align: center;
     color: white;
 }
 
-.animated-outline-button-demo .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
 .animated-outline-button-demo .container .button-container {
-    position: relative;
-    width: 70%;
+    /* width: 70%; */
     height: 200px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: .5px solid black;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
 }
 
 .animated-outline-button-demo .container .button-container:before {
-    content: attr(data-text);
-    position: absolute;
     background: #262626;
     color: #00bcd4;
-    padding: 5px 10px;
-    top: -15px;
-    left: 2%;
     border: .5px solid rgba(255, 255, 255, 0.5);
-    z-index: 1;
 }
 
 .animated-outline-button-demo .container .button-container .animated-outline-button {
@@ -536,43 +521,19 @@
 }
 
 .oscillating-solid-button-demo h2 {
-    font-size: 30px;
-    margin: 20px;
-    text-align: center;
     color: white;
 }
 
-.oscillating-solid-button-demo .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
 .oscillating-solid-button-demo .container .button-container {
-    position: relative;
-    width: 70%;
-    height: 120px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* height: 120px; */
     border: .5px solid #03a8f487;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
 }
 
 .oscillating-solid-button-demo .container .button-container:before {
-    content: attr(data-text);
-    position: absolute;
     background: #262626;
     color: #03a9f4;
-    padding: 5px 10px;
-    top: -15px;
-    left: 2%;
     border: .5px solid #03a8f487;
-    z-index: 1;
 }
 
 .oscillating-solid-button-demo .container .button-container .oscillating-solid-button {
@@ -653,5 +614,367 @@
     transform-origin: bottom right;
     transform: scale(0);
 }
+
+/* Three Dimensional Button Demo */
+.three-dimensional-button-demo {
+    margin: 0;
+    padding: 0;
+    background: #2196f3;
+    font-family: sans-serif;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.three-dimensional-button-demo h2 {
+    color: white;
+}
+
+.three-dimensional-button-demo .container .button-container {
+    border: .5px solid #03a8f487;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+}
+
+.three-dimensional-button-demo .container .button-container:before {
+    background: #262626;
+    color: #03a9f4;
+    border: .5px solid #03a8f487;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button {
+    position: relative;
+    margin: 5px 20px;
+    padding: 20px 20px 20px 30px;
+    color: white;
+    font-size: 20px;
+    font-family: sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    transition: .5s;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xlg {
+    padding: 25px 25px 25px 35px;
+    font-size: 25px;
+    letter-spacing: 15px;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.lg {
+    padding: 20px 20px 20px 30px;
+    font-size: 20px;
+    letter-spacing: 10px;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.md {
+    padding: 15px 15px 15px 25px;
+    font-size: 15px;
+    letter-spacing: 8px;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.sm {
+    padding: 12px 12px 12px 20px;
+    font-size: 12px;
+    letter-spacing: 5px;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xs {
+    padding: 8px 8px 8px 12px;
+    font-size: 8px;
+    letter-spacing: 3px;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:hover {
+    background: #2196f3;
+    box-shadow: -30px 30px 50px rgba(0, 0, 0, 0.4);
+    transform: rotate(-10deg) skew(5deg);
+    transition-delay: 2s;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.sm:hover {
+    box-shadow: -20px 20px 40px rgba(0, 0, 0, 0.4);
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xs:hover {
+    box-shadow: -10px 10px 25px rgba(0, 0, 0, 0.4);
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:before, 
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    background: white;
+    pointer-events: none;
+    transform-style: linear;
+    transition-property: width, opacity, transform, box-shadow;
+    transition-duration: .5s;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.sm:before, 
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.sm:after,
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xs:before, 
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xs:after {
+    width: 1px;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:before {
+    top: 0;
+    left: 0;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:after {
+    top: 0;
+    right: 0;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:hover:before {
+    width: 100%;
+    opacity: .1;
+    transform: translate(5px, -5px);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .1);
+    transition-delay: 0s, .5s, 1s, 1.5s;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.sm:hover:before,
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xs:hover:before {
+    transform: translate(3px, -3px);
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button:hover:after {
+    width: 100%;
+    opacity: .1;
+    transform: translate(10px, -10px);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .1);
+    transition-delay: 0s, .5s, 1s, 1.5s;
+}
+
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.sm:hover:after,
+.three-dimensional-button-demo .container .button-container .three-dimensional-button.xs:hover:after {
+    transform: translate(6px, -6px);
+}
+
+/* Neon Reflective Button Demo */
+.neon-reflective-button-demo {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #050801;
+}
+
+.neon-reflective-button-demo h2 {
+    color: white;
+}
+
+.neon-reflective-button-demo .container .button-container {
+    height: 250px;
+    border: .5px solid rgba(255, 255, 255, 0.5);
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 5px 15px;
+}
+
+.neon-reflective-button-demo .container .button-container:before {
+    background: black;
+    color: white;
+    border: .5px solid rgba(255, 255, 255, 0.5);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button {
+    position: relative;
+    display: inline-block;
+    padding: 25px 30px;
+    margin: 5px;
+    color: #03e9f4;
+    font-size: 24px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    letter-spacing: 4px;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0005)
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.xlg {
+    padding: 30px 35px;
+    font-size: 28px;
+    letter-spacing: 6px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.lg {
+    padding: 25px 30px;
+    font-size: 24px;
+    letter-spacing: 4px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.md {
+    padding: 20px 25px;
+    font-size: 20px;
+    letter-spacing: 4px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.sm {
+    padding: 15px 20px;
+    font-size: 16px;
+    letter-spacing: 3px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.xs {
+    padding: 10px 15px;
+    font-size: 12px;
+    letter-spacing: 2px;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.green {
+    filter: hue-rotate(290deg);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.pink {
+    filter: hue-rotate(110deg);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.yellow {
+    filter: invert(1) hue-rotate(65deg) brightness(3);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.orange {
+    filter: invert(1) hue-rotate(45deg) brightness(2.5);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.purple {
+    filter: hue-rotate(80deg);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.red {
+    filter: invert(1) brightness(1.5);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.white {
+    filter: grayscale(1) brightness(3);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.mint {
+    filter: invert(1) hue-rotate(160deg) brightness(3);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.cyan {
+    filter: invert(1) hue-rotate(165deg) brightness(3);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.magenta {
+    filter: invert(1) hue-rotate(335deg) brightness(3);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.hotpink {
+    filter: invert(1) hue-rotate(350deg) brightness(3);
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.yellow:hover,
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.orange:hover,
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.red:hover,
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.mint:hover,
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.cyan:hover,
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.magenta:hover,
+.neon-reflective-button-demo .container .button-container .neon-reflective-button.hotpink:hover {
+    color: white;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button:hover {
+    background: #03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 25px #03e9f4,
+                0 0 50px #03e9f4,
+                0 0 200px #03e9f4;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button span {
+    position: absolute;
+    display: block;
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #03e9f4);
+    animation: neon-reflective-1 1s linear infinite;
+}
+
+@keyframes neon-reflective-1 {
+    0% {
+        left: -100%;
+    }
+    50%, 100% {
+        left: 100%;
+    }
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #03e9f4);
+    animation: neon-reflective-2 1s linear infinite;
+    animation-delay: .25s;
+}
+
+@keyframes neon-reflective-2 {
+    0% {
+        top: -100%;
+    }
+    50%, 100% {
+        top: 100%;
+    }
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: neon-reflective-3 1s linear infinite;
+    animation-delay: .5s;
+}
+
+@keyframes neon-reflective-3 {
+    0% {
+        right: -100%;
+    }
+    50%, 100% {
+        right: 100%;
+    }
+}
+
+.neon-reflective-button-demo .container .button-container .neon-reflective-button span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #03e9f4);
+    animation: neon-reflective-4 1s linear infinite;
+    animation-delay: .75s;
+}
+
+@keyframes neon-reflective-4 {
+    0% {
+        bottom: -100%;
+    }
+    50%, 100% {
+        bottom: 100%;
+    }
+}
+
 
 
