--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -5,30 +5,69 @@
     text-align: center;
 }
 
-.button-demos-body .options-box {
+.button-demos-body .options-container {
+    position: relative;
     width: 75%;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
+    margin: 10px;
+    padding: 15px;
+    box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 10px;
+    color: #0d428c;
+
 }
 
-.button-demos-body .options-box button {
+.button-demos-body .options-container h3 {
+    font-size: 16px;
+    text-transform: uppercase;
     padding: 5px 10px;
-    margin: 5px;
-    border-radius: 5px;
+    margin: 0;
+    text-align: center;
+    color: #0d428c;
     background: white;
-    color: black;
+}
+
+.button-demos-body .options-container .options-box {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    box-shadow: inset rgba(0, 0, 0, 0.5) 0px 5px 10px;
+    background: #0d428c;
+
+}
+
+.button-demos-body .options-container .options-box .option-section {
+    padding: 10px;
+    margin: 5px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 10px;
+    background: white;
+}
+
+.button-demos-body .options-container .options-box button {
+    padding: 5px 10px;
+    margin: 5px 0;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-top: none;
+    border-bottom: none;
+    border-left: none;
+    background: white;
+    color: rgba(0, 0, 0, 1);
     transition: .5s;
 }
 
-.button-demos-body .options-box button:hover {
+.button-demos-body .options-container .options-box button.active {
+    background: #0d428c;
     color: white;
-    background: black;
+    border-color: rgba(255, 255, 255, 0.5);
 }
 
-.button-demos-body .options-box button:focus {
+.button-demos-body .options-container .options-box button:hover {
+    color: white;
+    background: black;
+    border-color: rgba(255, 255, 255, 0.5);
+}
+
+.button-demos-body .options-container .options-box button:focus {
     outline: none;
 }
 
@@ -1023,6 +1062,321 @@
         bottom: 100%;
     }
 }
+
+/* Liquid Wave Button Demo */
+.liquid-wave-button-demo {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.liquid-wave-button-demo h2,
+.liquid-wave-button-demo h3 {
+    color: #0d428c;
+    /* color: black; */
+}
+
+.liquid-wave-button-demo .container .button-container {
+    height: 250px;
+    border: .5px solid rgba(255, 255, 255, 0.5);
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 5px 15px;
+    flex-wrap: wrap;
+}
+
+.liquid-wave-button-demo .container .button-container.dark {
+    background: black;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+}
+
+.liquid-wave-button-demo .container .button-container.light {
+    background: white;
+    border: .5px solid rgba(0, 0, 0, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+
+}
+
+.liquid-wave-button-demo .container .button-container:before {
+    background: black;
+    color: white;
+    border: .5px solid rgba(255, 255, 255, 0.5);
+}
+
+.liquid-wave-button-demo .container .button-container.dark:before {
+    background: white;
+    color: black;
+    border: .5px solid rgba(0, 0, 0, 0.5);
+}
+
+.liquid-wave-button-demo .liquid-wave-button {
+    position: relative;
+    padding: 20px 45px;
+    margin: 5px;
+    display: block;
+    text-decoration: none;
+    border: none;
+    text-transform: uppercase;
+    width: 200px;
+    background: transparent;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button span {
+    position: relative;
+    z-index: 1;
+    color: white;
+    font-size: 20px;
+    letter-spacing: 8px;
+    width: 100%;
+    text-align: center;
+    text-shadow: 1px 1px rgba(0, 0, 0, .3);
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xlg {
+    padding: 25px 57px;
+    width: 250px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xlg span {
+    font-size: 24px;
+    letter-spacing: 10px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.lg {
+    padding: 20px 45px;
+    width: 200px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.lg span {
+    font-size: 20px;
+    letter-spacing: 8px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.md {
+    padding: 16px 35px;
+    width: 160px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.md span {
+    font-size: 16px;
+    letter-spacing: 6px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.sm {
+    padding: 14px 30px;
+    width: 130px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.sm span {
+    font-size: 14px;
+    letter-spacing: 4px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xs {
+    padding: 10px 15px 10px 18px;
+    width: 90px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xs span {
+    font-size: 10px;
+    letter-spacing: 2px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button .liquid {
+    position: absolute;
+    left: 0;
+    top: -80px;
+    width: 100%;
+    height: 200px;
+    background: #4973ff;
+    box-shadow: inset 0 0 50px rgba(0, 0, 0, .5);
+    transition: 1.25s;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.blue .liquid {
+    background: #4973ff;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.purple .liquid {
+    background: #8945c7;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.pink .liquid {
+    background: #ff5fff;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.carribean .liquid {
+    background: #59ddff;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.hotpink .liquid {
+    background: #fe479f;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.red .liquid {
+    background: #ff3333;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.redorange .liquid {
+    background: #ff4800;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.orange .liquid {
+    background: #ff6f00;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.yellow .liquid {
+    background: #ffc701;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.lightgreen .liquid {
+    background: #c5ef01;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.green .liquid {
+    background: #5bdb01;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.mint .liquid {
+    background: #00f192;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.white .liquid {
+    background: white;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.white span {
+    color: black;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.black .liquid {
+    background: black;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.black span {
+    color: white;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xlg .liquid {
+    top: -100px;
+    height: 250px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.lg .liquid {
+    top: -80px;
+    height: 200px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.md .liquid {
+    top: -60px;
+    height: 160px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.sm .liquid {
+    top: -50px;
+    height: 130px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xs .liquid {
+    top: -35px;
+    height: 90px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button:hover .liquid {
+    top: -120px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xlg:hover .liquid {
+    top: -150px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.md:hover .liquid {
+    top: -100px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.sm:hover .liquid {
+    top: -80px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.xs:hover .liquid {
+    top: -55px;
+}
+
+.liquid-wave-button-demo .liquid-wave-button .liquid:before,
+.liquid-wave-button-demo .liquid-wave-button .liquid:after {
+    content: "";
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -75%);
+}
+
+.liquid-wave-button-demo .liquid-wave-button .liquid.dark:before {
+    border-radius: 45%;
+    background: rgba(20, 20, 20, 1);
+    animation: liquid-wave 5s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button .liquid.light:before {
+    border-radius: 45%;
+    background: rgba(235, 235, 235, 1);
+    animation: liquid-wave 5s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.wave-nm .liquid:before {
+    animation: liquid-wave 5s linear infinite;
+}             
+
+.liquid-wave-button-demo .liquid-wave-button.wave-fs .liquid:before {
+    animation: liquid-wave 2.5s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.wave-sl .liquid:before {
+    animation: liquid-wave 10s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button .liquid.dark:after {
+    border-radius: 40%;
+    background: rgba(20, 20, 20, .5);
+    animation: liquid-wave 10s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button .liquid.light:after {
+    border-radius: 40%;
+    background: rgba(235, 235, 235, .5);
+    animation: liquid-wave 10s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.wave-nm .liquid:after {
+    animation: liquid-wave 10s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.wave-fs .liquid:after {
+    animation: liquid-wave 5s linear infinite;
+}
+
+.liquid-wave-button-demo .liquid-wave-button.wave-sl .liquid:after {
+    animation: liquid-wave 20s linear infinite;
+}
+
+@keyframes liquid-wave {
+    0% {
+        transform: translate(-50%, -75%) rotate(0deg);
+    }
+    100% {
+        transform: translate(-50%, -75%) rotate(360deg);
+    }
+}
+
+
 
 
 
